// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon \`component\` prop can access to svg defs if has children 1`] = `
<i
  aria-label="icon: undefined"
  class="anticon my-home-icon"
>
  <svg
    aria-hidden="true"
    class=""
    fill="currentColor"
    focusable="false"
    height="1em"
    width="1em"
  >
    <title>
      Cool Home
    </title>
    <path
      d="'M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z'"
    />
  </svg>
</i>
`;

exports[`Icon should give warning and render <i>{null}</i> 1`] = `
<i
  aria-label="icon: undefined"
  class="anticon"
/>
`;

exports[`Icon should render to a <i class="xxx"><svg>...</svg></i> 1`] = `
<i
  aria-label="icon: message"
  class="anticon anticon-message my-icon-classname"
>
  <svg
    aria-hidden="true"
    class=""
    fill="currentColor"
    focusable="false"
    height="1em"
    width="1em"
  >
    <use
      href="#message"
    />
  </svg>
</i>
`;

exports[`Icon should support basic usage 1`] = `
<div>
  <i
    aria-label="icon: home"
    class="anticon anticon-home"
  >
    <svg
      aria-hidden="true"
      class=""
      fill="currentColor"
      focusable="false"
      height="1em"
      width="1em"
    >
      <use
        href="#home"
      />
    </svg>
  </i>
  <i
    aria-label="icon: setting"
    class="anticon anticon-setting"
  >
    <svg
      aria-hidden="true"
      class=""
      fill="currentColor"
      focusable="false"
      height="1em"
      width="1em"
    >
      <use
        href="#setting"
      />
    </svg>
  </i>
  <i
    aria-label="icon: smile"
    class="anticon anticon-smile"
  >
    <svg
      aria-hidden="true"
      class=""
      fill="currentColor"
      focusable="false"
      height="1em"
      width="1em"
    >
      <use
        href="#smile"
      />
    </svg>
  </i>
  <i
    aria-label="icon: sync"
    class="anticon anticon-sync"
  >
    <svg
      aria-hidden="true"
      class="anticon-spin"
      fill="currentColor"
      focusable="false"
      height="1em"
      width="1em"
    >
      <use
        href="#sync"
      />
    </svg>
  </i>
  <i
    aria-label="icon: loading"
    class="anticon anticon-loading"
  >
    <svg
      aria-hidden="true"
      class="anticon-spin"
      fill="currentColor"
      focusable="false"
      height="1em"
      width="1em"
    >
      <use
        href="#loading"
      />
    </svg>
  </i>
</div>
`;

exports[`Icon should support config global two-tone primary color 1`] = `
<i
  aria-label="icon: check-circle"
  class="anticon anticon-check-circle"
>
  <svg
    aria-hidden="true"
    class=""
    fill="currentColor"
    focusable="false"
    height="1em"
    width="1em"
  >
    <use
      href="#check-circle"
    />
  </svg>
</i>
`;

exports[`Icon should support older usage 1`] = `
<div>
  <i
    aria-label="icon: home-o"
    class="anticon anticon-home-o"
  >
    <svg
      aria-hidden="true"
      class=""
      fill="currentColor"
      focusable="false"
      height="1em"
      width="1em"
    >
      <use
        href="#home-o"
      />
    </svg>
  </i>
  <i
    aria-label="icon: setting-fill"
    class="anticon anticon-setting-fill"
  >
    <svg
      aria-hidden="true"
      class=""
      fill="currentColor"
      focusable="false"
      height="1em"
      width="1em"
    >
      <use
        href="#setting-fill"
      />
    </svg>
  </i>
  <i
    aria-label="icon: smile-o"
    class="anticon anticon-smile-o"
  >
    <svg
      aria-hidden="true"
      class=""
      fill="currentColor"
      focusable="false"
      height="1em"
      width="1em"
    >
      <use
        href="#smile-o"
      />
    </svg>
  </i>
  <i
    aria-label="icon: check-circle-twotone"
    class="anticon anticon-check-circle-twotone"
  >
    <svg
      aria-hidden="true"
      class=""
      fill="currentColor"
      focusable="false"
      height="1em"
      width="1em"
    >
      <use
        href="#check-circle-twotone"
      />
    </svg>
  </i>
</div>
`;

exports[`Icon should support pass svg paths as children 1`] = `
<i
  aria-label="icon: undefined"
  class="anticon"
>
  <svg
    aria-hidden="true"
    class=""
    fill="currentColor"
    focusable="false"
    height="1em"
    viewBox="0 0 24 24"
    width="1em"
  >
    <title>
      Cool Home
    </title>
    <path
      d="M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z"
    />
  </svg>
</i>
`;

exports[`Icon should support svg react component 1`] = `
<i
  aria-label="icon: undefined"
  class="anticon my-home-icon"
>
  <svg
    aria-hidden="true"
    class=""
    fill="currentColor"
    focusable="false"
    height="1em"
    width="1em"
  >
    <title>
      Cool Home
    </title>
    <path
      d="'M10 20v-6h4v6h5v-8h3L12 3 2 12h3v8z'"
    />
  </svg>
</i>
`;

exports[`Icon should support two-tone icon 1`] = `
<i
  aria-label="icon: check-circle"
  class="anticon anticon-check-circle"
>
  <svg
    aria-hidden="true"
    class=""
    fill="currentColor"
    focusable="false"
    height="1em"
    width="1em"
  >
    <use
      href="#check-circle"
    />
  </svg>
</i>
`;

exports[`Icon support render svg as component 1`] = `
<i
  aria-label="icon: undefined"
  class="anticon"
>
  <svg
    fill="currentColor"
    height="1em"
    viewBox="0 0 1024 1024"
    width="1em"
  />
</i>
`;

exports[`Icon.createFromIconfontCN() should support iconfont.cn 1`] = `
<div
  class="icons-list"
>
  <i
    aria-label="icon: undefined"
    class="anticon"
  >
    <svg
      aria-hidden="true"
      class=""
      fill="currentColor"
      focusable="false"
      height="1em"
      width="1em"
    >
      <use
        href="#icon-tuichu"
      />
    </svg>
  </i>
  <i
    aria-label="icon: undefined"
    class="anticon"
  >
    <svg
      aria-hidden="true"
      class=""
      fill="currentColor"
      focusable="false"
      height="1em"
      width="1em"
    >
      <use
        href="#icon-facebook"
      />
    </svg>
  </i>
  <i
    aria-label="icon: undefined"
    class="anticon"
  >
    <svg
      aria-hidden="true"
      class=""
      fill="currentColor"
      focusable="false"
      height="1em"
      width="1em"
    >
      <use
        href="#icon-twitter"
      />
    </svg>
  </i>
</div>
`;
